--- a/web/src/pages/request.module.css
+++ b/web/src/pages/request.module.css
@@ -22,10 +22,18 @@
   margin: 60px 0 40px 0;
   font-size: var(--font-fluid-article-heading);
   line-height: var(--font-title1-line-height);
+
+  @media (max-width: 800px) {
+    padding: 0 20px;
+  }
 }
 
 p {
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
+
+  @media (max-width: 800px) {
+    margin: 0 20px 10px;
+  }
 }
 
 .formikForm {
